# beanie_cipher

./: .gitmodules  README.md
cryptanalysis/DS-MITM/: README.md  ds_mitm.mzn  flake.nix
cryptanalysis/boomerang/: Makefile  README.md  boomerang_probability.c  boomerang_truncated_u.mzn  flake.nix
cryptanalysis/differential_and_linear/: README.md  active_sbox.py  active_sbox_bit_template.mzn  clustering.py  clustering_dif.mzn  clustering_lin.mzn  flake.nix  pyproject.toml
cryptanalysis/edp_elp/: Cargo.toml  README.md  ep.py  flake.nix  pyproject.toml
cryptanalysis/edp_elp/experiments/: edp_3.json  edp_4.json  edp_5.json  edp_fixed_mask_3.json  edp_fixed_mask_4.json  edp_fixed_mask_5.json  elp_4_sample.json  elp_fixed_mask_3.json  elp_fixed_mask_4.json  elp_fixed_mask_5.json
cryptanalysis/edp_elp/src/: lib.rs  main.rs  statistic_experiments.rs
cryptanalysis/integral/: README.md  flake.nix  mon_int_cp.py  mon_int_u.mzn  pyproject.toml
cryptanalysis/surrogate_diff/: Cargo.toml  README.md  flake.nix
cryptanalysis/surrogate_diff/src/: main.rs
reference_implementations/c/: Makefile  README.md  beanie.c  beanie.h  flake.nix  testcases.c
reference_implementations/rust/: Cargo.toml  README.md  flake.nix
reference_implementations/rust/src/: lib.rs
