[package]
name = "beanie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "beanie"
crate-type = ["cdylib"]

[dependencies]
beanie-cipher = { version = "0.1.0", path = "../../reference_implementations/rust" }
rand = "0.9.1"

[dependencies.pyo3]
version = "0.25.1"
features = [
  "extension-module",
  "abi3-py38",        # To be able to install on older pyhon versions
]
